--- a/views/pages/aboutUs.hbs
+++ b/views/pages/aboutUs.hbs
@@ -1,4 +1,22 @@
-<div class="container">
-  <h1>About us page</h1>
-  <p>hello world</p>
-</div>
+<section id="header" class="vh-100 d-flex align-items-center" style="background: #b39979">
+    <div class="container text-center">
+        <h1 class="headline text-uppercase mb-4">About us</h1>
+        <h3 class="after_headline text-uppercase ">nature travel and engineering </h3>
+    </div>
+</section>
+<section id="description" class=" d-flex align-items-center" >
+    <div class="container text-center my-5">
+        <h3 class="head_story text-uppercase my-5">Travel description</h3>
+        <p class="story text-uppercase" >
+            Company nature travel and engineering have over 20 years of experience in the marketplace. We are providing
+            reliable, safe, quality service. The only place where you can fix or upgrade your motorcycle, car, any kind
+            of vehicle, trusting the best mechanics in the field. Also, you can easily rent a car or motorcycle. We
+            cooperate with Swiss tourist company Alatoo-Moto which provides an amazing, adventure tours over Middle Asia
+        </p>
+    </div>
+</section>
+<section id="avatar" class="vh-100">
+    <div class="container text-center mt-5">
+<h3 class="head-team text-uppercase">our team</h3>
+    </div>
+</section>
