scss components directory

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -3,6 +3,6 @@
 @import "./utils/font-face.scss";
 
 body {
-    background: url('../img/Home/home-header-bg.jpg');
-    font-family: 'Montserrat_500', Arial;
+  background: url("../img/Home/home-header-bg.jpg");
+  font-family: "Montserrat_500", Arial;
 }
