done footer structure without adaptability

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,6 +1,7 @@
 @import "./utils/vars.scss";
 @import "./utils/mixins.scss";
 @import "./utils/font-face.scss";
+@import "./components/footer.scss";
 
 body {
   background: url("../img/Home/home-header-bg.jpg");
