--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,24 +1,24 @@
 <footer class="d-block" style="background: #909090">
-    <div class="container d-flex justify-content-between text-uppercase text-white align-items-start">
+    <div class="container d-flex justify-content-between text-uppercase text-white align-items-start py-4">
         <div class="d-grid">
-            <h4>Info</h4>
+            <h4 class="info">Info</h4>
             <a href="#">About us</a>
             <a href="#">Contacts</a>
             <a href="#">About Kyrgyzstan</a>
             <a href="#">About Tajikistan</a>
             <a href="#">About Mongolia</a>
             <a href="#">About CHINA</a>
-            <div class="address d-inline-block">
-                <p>Phone: +996556666666</p>
-                <p>address: osh,kyrgyzstan</p>
-                <p>index:723500</p>
+            <div class="address d-grid mb-0 fw-lighter">
+                <p class="mb-0">Phone: +996556666666</p>
+                <p class="mb-0">address: osh,kyrgyzstan</p>
+                <p class="mb-0">index:723500</p>
             </div>
         </div>
         <div class="d-grid">
-            <h4>Rents</h4>
+            <h4 class="rents">Rents</h4>
             <a href="#">OFF-Road cars</a>
             <a href="#">OFF-Road motorcycles</a>
-            <a href="#">Tours</a>
+            <h4 class="tours pt-4">Tours</h4>
             <a href="#">Silk-Way road tour</a>
             <a href="#">Naryn tour</a>
             <a href="#">Pamir tour</a>
@@ -28,14 +28,27 @@
             <a href="#">Bartang tour</a>
         </div>
         <div class="d-grid">
-            <h4>Menu</h4>
+            <h4 class="menu">Menu</h4>
             <a href="#">Repair Shop</a>
             <a href="#">Housing</a>
             <a href="#">Save budget</a>
-            <h3>Classic hotel</h3>
+            <a href="#">Tires</a>
+            <a href="#">Oil change</a>
+        </div>
+        <div class="logo-box d-grid">
+            <div class="logo-block-footer mt-3">
+                <a class="footer-brand" href="/">
+                    <img src="assets/icons/NTE-header-logo.svg" alt="NTE kg logo" class="logo">
+                </a>
+            </div>
+            <div class="after-footer-logo mt-4">
+            <h4 class="mb-1">Our partners</h4>
+            <h3 class="partner fw-bold" style="color: black; font-size: 2.25rem">Alatoo-moto</h3>
+            <h3 class="partner fw-bold" style="color: black; font-size: 2.25rem">Classic hotel</h3>
+            </div>
         </div>
     </div>
-    <div class="text-center text-uppercase" style="background: #E5E5E5">
-        <p class="p-3">Copyright© 2021 Nte All Rights Reserved.</p>
+    <div class="text-center text-uppercase" style="background: linear-gradient(0deg, #908d8d -3.78%, #ffffff 101.27%);">
+        <p class="p-3" style="color:#797979" >Copyright© 2021 Nte All Rights Reserved.</p>
     </div>
 </footer>
