--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,6 +1,4 @@
-@import "./utils/vars.scss";
-@import "./utils/mixins.scss";
-@import "./utils/font-face.scss";
+@import "./components/common.scss";
 
 body {
   background: url("../img/Home/home-header-bg.jpg");
