--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,11 +1,16 @@
-<nav class="navbar row m-0" id="top_navbar">
+<nav class="navbar row m-0 text-uppercase px-3 fixed-top light-limp-bg">
 
-  <div class="left-nav col-md-5 d-flex justify-content-between">
-    <div class="language-switch col-md-3">
+  <div class="left-nav col-md-5 col-4 d-flex justify-content-between">
+    <div class="language-switch position-relative nav-drop-container">
       <span>Eng</span>
+      <div class="available-langs position-absolute nav-drop-item">
+        <p class="py-1 px-2 m-0">deu</p>
+        <p class="py-1 px-2 m-0">rus</p>
+        <p class="py-1 px-2 m-0 selected">eng</p>
+      </div>
     </div>
 
-    <ul class="navbar-nav col-md-9 d-flex justify-content-around">
+    <ul class="navbar-nav col-md-9 justify-content-around flex-row d-none d-md-flex">
       <li class="nav-item">
         <a class="nav-link
           {{#if isaboutUs}}
@@ -13,19 +18,54 @@
           {{/if}}
         " href="/about-us">About us</a>
       </li>
-      <li class="nav-item">Rents</li>
+      <li class="nav-item dropdown-link position-relative nav-drop-container">Rents
+
+        <ul class="dropdown position-absolute py-2 ps-3 nav-drop-item">
+          <li class="nav-item py-1 px-2">
+            <a href="/off-road-cars" class="nav-link">OFF-Road cars</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/Off-road-motorcycles" class="nav-link">Off-road motorcycles</a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </div>
 
-  <div class="logo-block col-md-2">
-    <a class="navbar-brand" href="/">
-      <img src="assets/icons/NTE-header-logo.svg" alt="NTE kg logo" class="logo">
+  <div class="logo-block col-md-2 col-4 p-0 text-center">
+    <a class="navbar-brand m-0" href="/">
+      <img src="assets/icons/NTE-header-logo.svg" alt="NTE kg logo" class="logo mw-100">
     </a>
   </div>
 
-  <div class="right-nav col-md-5 d-flex justify-content-between">
-    <ul class="navbar-nav col-md-9 d-flex justify-content-around">
-      <li class="nav-item">Tours</li>
+  <div class="right-nav col-md-5 col-4 d-flex justify-content-md-between justify-content-end">
+    <ul class="navbar-nav col-md-9 flex-row justify-content-around d-none d-md-flex">
+      <li class="nav-item dropdown-link position-relative nav-drop-container">Tours
+
+        <ul class="dropdown position-absolute py-2 ps-3 nav-drop-item">
+          <li class="nav-item py-1 px-2">
+            <a href="/silk-way-road-tour" class="nav-link">Silk-way road tour</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/naryn-tour" class="nav-link">Naryn tour</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/pamir-tour" class="nav-link">pamir tour</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/tian-shan-tour" class="nav-link">Tian-shan tour</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/kyrgyzstan-mongolia-tour" class="nav-link">Kyrgyzstan-mongolia tour</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/tosor-tour" class="nav-link">tosor tour</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/bartang-tour" class="nav-link">bartang tour</a>
+          </li>
+        </ul>
+      </li>
       <li class="nav-item">
         <a class="nav-link
           {{#if isContacts}}
@@ -35,8 +75,41 @@
       </li>
     </ul>
 
-    <div class="burger-menu col-md-3">
-      <img src="assets/icons/Menu.svg" alt="Burger icon svg">
+    <div class="burger-menu dropdown-link position-relative nav-drop-container">
+      <img src="assets/icons/Menu.svg" alt="Burger svg icon">
+
+      <ul class="dropdown position-absolute py-2 ps-3 nav-drop-item">
+          <li class="nav-item py-1 px-2">
+            <a href="/tours" class="nav-link">Tours</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/off-road-cars" class="nav-link">Off-road cars</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/Off-road-motorcycles" class="nav-link">Motorcycles</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/repair-shop" class="nav-link">Repair Shop</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/housing" class="nav-link">Housing</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/save-budget" class="nav-link">Save budget</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/tires" class="nav-link">tires</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/oil" class="nav-link">oil</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/about-us" class="nav-link">About us</a>
+          </li>
+          <li class="nav-item py-1 px-2">
+            <a href="/contacts" class="nav-link">Contacts</a>
+          </li>
+        </ul>
     </div>
   </div>
 </nav>
