--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -9,14 +9,14 @@
   <link rel="shortcut icon" href="" type="image/x-icon">
 
   {{!-- css styles --}}
-  <link rel="stylesheet" href="{{cssLink}}">
+  <link rel="stylesheet" href="assets/css/app.css">
 
   {{!-- bootstrap --}}
   <link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css">
   
   <title>{{title}}</title>
 </head>
-<body>
+<body class="text-uppercase">
   {{> navbar}}
 
   {{{body}}}
