--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar row m-0 text-uppercase px-3 fixed-top light-limp-bg">
+<nav class="navbar row m-0 px-3 fixed-top light-limp-bg">
 
   <div class="left-nav col-md-5 col-4 d-flex justify-content-between">
     <div class="language-switch position-relative nav-drop-container">
