--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,27 +1,57 @@
 footer {
-  img {
-    width: 96%;
-  }
-  h4 {
-    font-family: 'Roboto_700', sans-serif;
-    font-size: 1.2rem;
-    line-height: 20px;
-    color: #506275;
-  }
-  a {
-    color: white;
-    text-decoration: none;
+  background: #909090;
+
+  .footer-body {
     font-family: 'Roboto_500', sans-serif;
-    line-height: 28px;
-  }
-  a:hover {
-    color: rgba(255, 255, 255, 0.44);
-    transition: color 0.3s;
+    width: 90%;
+    max-width: 1400px;
+
+    @include screen('sm') {
+      .footer-links {
+        height: 20px;
+        contain: content;
+
+        &:hover {
+          height: max-content;
+        }
+      }
     }
-  .address {
-    margin: 1rem 0 0 0;
-    font-size: 0.9rem;
-    font-family: 'Montserrat_300', sans-serif;
-    line-height: 24px;
   }
+
+  .heading {
+    font-family: 'Roboto_400', sans-serif;
+    color: #dddddd;
   }
+
+  a {
+    text-decoration: none;
+    color: #fff;
+
+    &:hover {
+      color: #bebebe;
+    }
+  }
+
+  .logoAndPartners {
+    @media screen and (min-width: 992px) {
+     width: max-content; 
+    }
+
+    .partners {
+      .partner-item {
+        color: #000000;
+        font-family: 'Roboto_900', sans-serif;
+      }
+    }
+  }
+
+  .address, .copyright {
+    font-size: 14px;
+    font-family: 'Roboto_400', sans-serif;
+  }
+
+  .copyright {
+    background: #E5E5E5;
+    color: #697078;
+  }
+}
