--- a/views/pages/home.hbs
+++ b/views/pages/home.hbs
@@ -1,3 +1,13 @@
-<div class="container">
-  <h1 class="text-success">Home page</h1>
-</div>
+<main id="home">
+  <header  class="text-light text-center d-flex flex-column justify-content-center">
+    <h1 class="headline">Kyrgyzstan</h1>
+    <h2 class="subtitle display-6">Discover with us</h2>
+  </header>
+
+  <section class="engineering mt-5">
+    <h3 class="heading text-center">Nature travel and engineering</h3>
+    <div>
+        
+    </div>
+  </section>
+</main>
