clean code and create new pages

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,5 @@
 @import "./pages/home.scss";
 @import "./pages/aboutUs.scss";
 @import "./pages/housing.scss";
+@import "./pages/motorcycles.scss";
+@import "./pages/cars.scss";
