--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -1,8 +1,3 @@
-.light-limp-bg {
-  background: rgba(255, 255, 255, 0.5);
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
-  transition: all 0.3s ease;
-}
 
 .nav-drop-container {
   .nav-drop-item {
@@ -21,7 +16,7 @@
 }
 
 .active {
-  color: tomato !important;
+  color: #000000 !important;
 }
 
 nav {
