--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,4 +1,5 @@
-<nav class="navbar row m-0 px-3 fixed-top light-limp-bg">
+<div class="light-limp-bg fixed-top">
+<nav class="navbar row m-auto px-3 mxW-1400">
 
   <div class="left-nav col-md-5 col-4 d-flex justify-content-between">
     <div class="language-switch position-relative nav-drop-container">
@@ -113,3 +114,4 @@
     </div>
   </div>
 </nav>
+</div>
