added some new files and folders by name housing, tires, oil, repair-shop, save-budget as well as to files main and routes added new lines

--- a/views/pages/aboutUs.hbs
+++ b/views/pages/aboutUs.hbs
@@ -1,7 +1,7 @@
 <main id="about-us" class="text-center">
 	<header  class="text-light d-flex flex-column justify-content-center">
     <h1 class="headline">About us</h1>
-    <h2 class="subtitle display-6">Nature travel and engeneering</h2>
+    <h2 class="subtitle display-6">Nature travel and engineering</h2>
   </header>
 
 	<section class="description wz-90 mx-auto" >
