--- a/views/pages/oil.hbs
+++ b/views/pages/oil.hbs
@@ -1,12 +1,12 @@
-<main id="housing" class="text-center">
+<main id="oil" class="text-center">
     <header class="text-light d-flex flex-column justify-content-center">
-        <h1 class="headline">Housing</h1>
+        <h1 class="headline">oil change</h1>
         <h2 class="subtitle mt-4 mb-0" style="font-size: 2.26rem;">nature travel and engineering</h2>
     </header>
-    <section class="houses">
+    <section class="oils">
         <div class="mxW-1400 wz-90 mx-auto">
-            <h3 class="subtitle" style="font-size: 2.26rem;">Description</h3>
-            <p class="py-5 mb-0 text-start">No added houses</p>
+            <h3 class="subtitle" style="font-size: 1.57rem " >Description</h3>
+            <p class="py-5 mb-0 text-start">No added oils</p>
         </div>
     </section>
 </main>
