--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,3 +14,7 @@
 @import "./pages/housing.scss";
 @import "./pages/motorcycles.scss";
 @import "./pages/cars.scss";
+@import "./pages/tires.scss";
+@import "./pages/oil.scss";
+@import "src/scss/pages/save-budget";
+@import "src/scss/pages/repair-shop";
