--- a/src/scss/pages/housing.scss
+++ b/src/scss/pages/housing.scss
@@ -1,3 +1,10 @@
 main#housing {
-    background: rgb(194, 194, 194);
+       header {
+        background: url("../img/Housing/Housing-header-bg.jpg") no-repeat center;
+    }
+    section {
+        @extend .subtitle;
+        padding-top: 5em;
+        background: linear-gradient(26.49deg, #D8D7D8 -3.78%, #F9F9F9 101.27%);;
+    }
 }
