--- a/views/pages/motorcycles.hbs
+++ b/views/pages/motorcycles.hbs
@@ -7,7 +7,7 @@
   </header>
 
   <section class="my-5 mxW-1400 wz-90 mx-auto">
-    <h4 class="subtitle text-center mb-5">Countries we visit</h4>
+    <h4 class="subtitle text-center mb-5">off-road motorcycles</h4>
 
 		<p class="mt-5">No added motorcycles</p>
   </section>
