--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -22,13 +22,13 @@
 			<a href="/off-road-cars">OFF-Road cars</a>
 			<a href="/Off-road-motorcycles">OFF-Road motorcycles</a>
 			<h5 class="tours pt-4">Tours</h5>
-			<a href="/silk-way-road-tour">Silk-Way road tour</a>
-			<a href="/naryn-tour">Naryn tour</a>
-			<a href="/pamir-tour">Pamir tour</a>
-			<a href="/tian-shan-tour">Tian-shan tour</a>
-			<a href="/kyrgyzstan-mongolia-tour">Kyrgyzstan-mongolia tour</a>
-			<a href="/tosor-tour">Tosor tour</a>
-			<a href="/bartang-tour">Bartang tour</a>
+			<a href="/tours/silk-way">Silk-Way road tour</a>
+			<a href="/tours/naryn">Naryn tour</a>
+			<a href="/tours/pamir">Pamir tour</a>
+			<a href="/tours/tian-shan">Tian-shan tour</a>
+			<a href="/tours/mongolia">Kyrgyzstan-mongolia tour</a>
+			<a href="/tours/tosor">Tosor tour</a>
+			<a href="/tours/bartang">Bartang tour</a>
 		</div>
 
 		<div class="col-lg-2 col-sm-4 d-flex flex-column mt-3 footer-links">
