--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -45,25 +45,25 @@
 
         <ul class="dropdown position-absolute py-2 ps-3 nav-drop-item">
           <li class="nav-item py-1 px-2">
-            <a href="/silk-way-road-tour" class="nav-link">Silk-way road tour</a>
+            <a href="/tours/silk-way" class="nav-link">Silk-way road tour</a>
           </li>
           <li class="nav-item py-1 px-2">
-            <a href="/naryn-tour" class="nav-link">Naryn tour</a>
+            <a href="/tours/naryn" class="nav-link">Naryn tour</a>
           </li>
           <li class="nav-item py-1 px-2">
-            <a href="/pamir-tour" class="nav-link">pamir tour</a>
+            <a href="/tours/pamir" class="nav-link">pamir tour</a>
           </li>
           <li class="nav-item py-1 px-2">
-            <a href="/tian-shan-tour" class="nav-link">Tian-shan tour</a>
+            <a href="/tours/tian-shan" class="nav-link">Tian-shan tour</a>
           </li>
           <li class="nav-item py-1 px-2">
-            <a href="/kyrgyzstan-mongolia-tour" class="nav-link">Kyrgyzstan-mongolia tour</a>
+            <a href="/tours/mongolia" class="nav-link">Kyrgyzstan-mongolia tour</a>
           </li>
           <li class="nav-item py-1 px-2">
-            <a href="/tosor-tour" class="nav-link">tosor tour</a>
+            <a href="/tours/tosor" class="nav-link">tosor tour</a>
           </li>
           <li class="nav-item py-1 px-2">
-            <a href="/bartang-tour" class="nav-link">bartang tour</a>
+            <a href="/tours/bartang" class="nav-link">bartang tour</a>
           </li>
         </ul>
       </li>
