--- a/src/scss/pages/aboutUs.scss
+++ b/src/scss/pages/aboutUs.scss
@@ -15,11 +15,22 @@ main#about-us {
   }
   .targets {
     list-style: none;
+
       &  *::before {
         content: "\25CF";
         margin-right: 5px;
-
-
       }
+  }
+  .h1Media {
+    @include font-size(6em, 35)
+  }
+  .h2Media {
+    @include font-size(2.25em, 32)
+  }
+  .h3Media {
+    @include font-size(1.57em, 15)
+  }
+  .content {
+      @include font-size(1em, 10)
   }
 }
