--- a/views/pages/aboutUs.hbs
+++ b/views/pages/aboutUs.hbs
@@ -1,20 +1,20 @@
 <main id="about-us" class="text-center">
     <header class="text-light d-flex flex-column justify-content-center">
-        <h1 class="headline">About us</h1>
-        <h2 class="subtitle display-6">Nature travel and engineering</h2>
+        <h1 class="headline h1Media">About us</h1>
+        <h2 class="subtitle h2Media">Nature travel and engineering</h2>
     </header>
 
     <section class="description wz-90 mx-auto">
-        <h3 class="subtitle mb-4">Travel description</h3>
-        <p class="m-0">
+        <h3 class="subtitle h3Media mb-4">Travel description</h3>
+        <p class="content m-0">
             Company nature travel and engineering have over 20 years of experience in the marketplace. We are providing
             reliable, safe, quality service. The only place where you can fix or upgrade your motorcycle, car, any kind
             of vehicle, trusting the best mechanics in the field. Also, you can easily rent a car or motorcycle.
         </p>
-        <p>We cooperate with Swiss tourist company Alatoo-Moto which provides an amazing, adventure tours over Middle
+        <p class="content">We cooperate with Swiss tourist company Alatoo-Moto which provides an amazing, adventure tours over Middle
             Asia</p>
-        <p class="fw-bold ps-3 mb-0">Our target</p>
-        <ul class="targets text-center pe-4 ">
+        <p class="content fw-bold ps-3 mb-0">Our target</p>
+        <ul class="content targets text-center pe-4">
             <li>Create comfort</li>
             <li>Give an unforgettable feeling</li>
             <li>Ensure safety</li>
@@ -24,7 +24,7 @@
     </section>
 
     <section class="mxW-1400 wz-90 mx-auto">
-        <h3 class="subtitle">our team</h3>
-        <p class="my-5 text-start">No added employees</p>
+        <h3 class="subtitle h3Media">our team</h3>
+        <p class="content my-5 text-start">No added employees</p>
     </section>
 </main>
