added a new file about Kyrgyzstan and new files related to it

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,3 +19,4 @@
 @import "./pages/oil.scss";
 @import "src/scss/pages/save-budget";
 @import "src/scss/pages/repair-shop";
+@import "src/scss/pages/about-kyrgyzstan";
