--- a/views/pages/aboutUs.hbs
+++ b/views/pages/aboutUs.hbs
@@ -6,50 +6,50 @@
 
     <section class="description wz-90 mx-auto">
         <h3 class="subtitle mb-4" lang-key="travelDescription">Travel description</h3>
-        <p class="content m-0">
+        <p class="content m-0" lang-key="aboutUsP1">
             Company nature travel and engineering have over 20 years of experience in the marketplace. We are providing
             reliable, safe, quality service. The only place where you can fix or upgrade your motorcycle, car, any kind
             of vehicle, trusting the best mechanics in the field. Also, you can easily rent a car or motorcycle.
         </p>
-        <p class="content">We cooperate with Swiss tourist company Alatoo-Moto which provides an amazing, adventure
+        <p class="content" lang-key="aboutUsP2">We cooperate with Swiss tourist company Alatoo-Moto which provides an amazing, adventure
             tours over Middle
             Asia</p>
-        <p class="content fw-bold ps-3 mb-0">Our target</p>
+        <p class="content fw-bold ps-3 mb-0" lang-key="aboutUsP3">Our target</p>
         <ul class="content targets text-center pe-4">
-            <li>Create comfort</li>
-            <li>Give an unforgettable feeling</li>
-            <li>Ensure safety</li>
-            <li>To make you feel the whole nature of Kyrgyzstan</li>
-            <li>Reach worthy heights</li>
+            <li lang-key="aboutUsP4">Create comfort</li>
+            <li lang-key="aboutUsP5">Give an unforgettable feeling</li>
+            <li lang-key="aboutUsP6">Ensure safety</li>
+            <li lang-key="aboutUsP7">To make you feel the whole nature of Kyrgyzstan</li>
+            <li lang-key="aboutUsP8">Reach worthy heights</li>
         </ul>
     </section>
 
     <section class="mxW-1400 wz-90 mx-auto">
-        <h3 class="subtitle h3Media">our team</h3>
+        <h3 class="subtitle h3Media" lang-key="ourTeam">our team</h3>
         <div class="d-flex flex-column flex-lg-row pt-4 justify-content-between">
             <div class="avatar col-lg-3 align-self-center text-center mb-5 mb-lg-0">
                 <img class="ellipse text-center w-75 " src="assets/img/About-us/Ellipse-5.jpg"
                      alt="avatar">
-                <p>Shohruh </p>
-                <p>(Manager)</p>
+                <p lang-key="aboutUsP9">Shohruh </p>
+                <p lang-key="aboutUsP10">(Manager)</p>
             </div>
             <div class="avatar col-lg-3 align-self-center text-center mb-5 mb-lg-0">
                 <img class="ellipse text-center w-75" src="assets/img/About-us/Ellipse-6.jpg"
                      alt="avatar">
-                <p>Kamil</p>
-                <p>(Mechanic)</p>
+                <p lang-key="aboutUsP11">Kamil</p>
+                <p lang-key="aboutUsP12">(Mechanic)</p>
             </div>
             <div class="avatar col-lg-3 align-self-center text-center mb-5 mb-lg-0">
                 <img class="ellipse text-center w-75" src="assets/img/About-us/Ellipse-7.jpg"
                      alt="avatar">
-                <p>Kolya</p>
-                <p>(mechanic)</p>
+                <p lang-key="aboutUsP13">Kolya</p>
+                <p lang-key="aboutUsP14">(mechanic)</p>
             </div>
             <div class="avatar col-lg-3 align-self-center text-center">
                 <img class="ellipse text-center w-75" src="assets/img/About-us/Ellipse-8.jpg"
                      alt="avatar">
-                <p>Nafisa</p>
-                <p>(chief accountant)</p>
+                <p lang-key="aboutUsP15">Nafisa</p>
+                <p lang-key="aboutUsP16">(chief accountant)</p>
             </div>
 
         </div>
