--- a/views/pages/cars.hbs
+++ b/views/pages/cars.hbs
@@ -43,8 +43,8 @@
                 </div> <!--end second img-->
                 <div class="col-lg-4 align-self-center text-center">
                     <p class="autoName" lang-key="offRoadCarsP3">toyota land cruiser 76</p>
-                    <pre class="text-start pb-3" style="font-size: 0.8rem" lang-key="offRoadCarsP4">
-<strong>
+                    <pre class="text-start pb-3" style="font-size: 0.8rem">
+<strong lang-key="offRoadCarsP4">
 Toyota Land cruiser 76
 Engine volume: 4.2
 Fuel type: Diesel
@@ -67,9 +67,9 @@ Fuel tank volume: 100L
                          alt="car">
                 </div> <!--end third img-->
                 <div class="col-lg-4 align-self-center text-center">
-                    <p class="autoName">toyota land cruiser 78</p>
+                    <p class="autoName" lang-key="offRoadCarsP5">toyota land cruiser 78</p>
                     <pre class="text-start pb-3" style="font-size: 0.8rem">
-<strong>
+<strong lang-key="offRoadCarsP6">
 Toyota Land cruiser 78
 Engine volume: 4.2
 Fuel type: Diesel
@@ -92,9 +92,9 @@ Fuel tank volume: 100L
                          alt="car">
                 </div> <!--end fourth img-->
                 <div class="col-lg-4 align-self-center text-center">
-                    <p class="autoName">toyota raf 4</p>
+                    <p class="autoName" lang-key="offRoadCarsP7">toyota raf 4</p>
                     <pre class="text-start pb-3" style="font-size: 0.8rem">
-<strong>
+<strong lang-key="offRoadCarsP8">
 Toyota RAV4
 Engine volume: 2.0
 Fuel type: Petrol
@@ -117,9 +117,9 @@ Fuel tank volume: 70L
                          alt="car">
                 </div> <!--end fifth img-->
                 <div class="col-lg-4 align-self-center text-center">
-                    <p class="autoName">toyota raf 4</p>
+                    <p class="autoName" lang-key="offRoadCarsP7">toyota raf 4</p>
                     <pre class="text-start pb-3" style="font-size: 0.8rem">
-<strong>
+<strong lang-key="offRoadCarsP8">
 Toyota RAV4
 Engine volume: 2.0
 Fuel type: Petrol
@@ -142,9 +142,9 @@ Fuel tank volume: 70L
                          alt="auto tools">
                 </div> <!--end sixth img-->
                 <div class="col-lg-4 align-self-center text-center">
-                    <p class="autoName">Mitsubishi Montero Sport</p>
+                    <p class="autoName" lang-key="offRoadCarsP9">Mitsubishi Montero Sport</p>
                     <pre class="text-start pb-3" style="font-size: 0.8rem">
-<strong>
+<strong lang-key="offRoadCarsP10">
 Mitsubishi Montero Sport
 Engine volume: 3.5
 Fuel type: Petrol
