--- a/views/pages/home.hbs
+++ b/views/pages/home.hbs
@@ -27,7 +27,7 @@
       {{#each homePageData.services}}
         <a href="/{{pageLink}}" class="service py-3 justify-content-center my-4 col-lg-2 col-md-4 col-5 d-grid gap-4">
           <img class="mw-100 align-self-center" src="assets/icons/home/{{icon}}" alt="{{title}}">
-          <p class="m-0 align-self-end text-center">{{title}}</p>
+          <p class="m-0 align-self-end text-center" lang-key="{{langKey}}">{{title}}</p>
         </a>
       {{/each}}
     </div>
@@ -41,7 +41,7 @@
       <div class="main-countries-block position-relative">
         <div class="decoration position-absolute"></div>
         <div class="country rounded-pill ps-5 pb-2 pb-sm-4 d-flex align-items-end" style="background-image: url(assets/img/Home/{{bgImage}});">
-          <a href="/about-{{name}}" class="position-relative light-limp-bg text-center py-2 text-dark rounded-pill ms-sm-5">about-{{name}}</a>
+          <a href="/about-{{name}}" class="position-relative light-limp-bg text-center py-2 text-dark rounded-pill ms-sm-5" lang-key="{{langKey}}">about-{{name}}</a>
           <div class="overlay position-absolute rounded-pill"></div>
         </div>
       </div>
